# agentic-tool-registry

./: .gitignore  CONTRIBUTING.md  LEGAL.md  README.md  pyproject.toml
.github/workflows/: build-registry-bundle.yml  publish-registry-pages.yml  validate-registry.yml
channels/: community.json  experimental.json  index.json  stable.json
schemas/: tool-verification.schema.json  toolcard.schema.json  toolspec.schema.json
scripts/: build_registry_bundle.py  check_links.py  registry_sync_cli.py  validate_toolcards.py
skills/tool-search/: SKILL.md
src/: __init__.py  atr_cli.py
src/commands/: __init__.py  build_registry_bundle.py  check_links.py  init_tool.py  resolve.py  search.py  show.py  sync.py  validate_toolcards.py
src/utils/: __init__.py  common_utils.py  registry_file_utils.py  toolcards_utils.py  toolspecs_utils.py
tools/arxiv/api/: toolcard.json  toolspec.json  verification.json
tools/balldontlie/api/: toolcard.json  toolspec.json  verification.json
tools/google/books-api/: toolcard.json  toolspec.json  verification.json
tools/google/calendar-api/: toolcard.json  toolspec.json  verification.json
tools/google/drive-api/: toolcard.json  toolspec.json  verification.json
tools/nasa/open-apis/: toolcard.json  toolspec.json  verification.json
tools/notion/public-api/: toolcard.json  toolspec.json  verification.json
tools/open-library/api/: toolcard.json  toolspec.json  verification.json
tools/polymarket/cli/: toolcard.json  toolspec.json  verification.json
tools/remove-bg/api/: toolcard.json  toolspec.json  verification.json
(+15 files in other folders)
